// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders 1`] = `
<div
  id="modal-root"
>
  <div
    class="Picasso-root"
    data-base-ui-inert=""
  >
    <span
      data-base-ui-focus-guard=""
      data-type="outside"
      role="button"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-owns=":r2:"
      style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
    />
    <span
      data-base-ui-focus-guard=""
      data-type="outside"
      role="button"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
  <div
    data-base-ui-portal=""
    id=":r2:"
  >
    <div
      class="fixed z-modal inset-0 bg-black/50 transition-opacity data-starting-style:opacity data-ending-style:opacity"
      data-base-ui-inert=""
      data-open=""
      role="presentation"
      style="user-select: none; transition-duration: 300ms;"
    />
    <span
      data-base-ui-focus-guard=""
      data-base-ui-inert=""
      data-type="inside"
      role="button"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
    <div
      class="fixed z-modal inset-0 flex flex-col text-lg leading-[normal] justify-center items-center transition-opacity data-starting-style:opacity data-ending-style:opacity"
      data-base-ui-focusable=""
      data-open=""
      id=":r0:"
      role="dialog"
      style="--nested-dialogs: 0; transition-duration: 300ms;"
      tabindex="-1"
    >
      <div
        class="bg-white shadow-2 transition-shadow duration-300 delay-0 outline-hidden overflow-y flex flex-col m-4 sm:h-auto sm:m-8 max-w-[calc(100%_ sm:max-w-[calc(100%_ rounded-md w-[40.625rem] relative max-h-[calc(100%_ sm:max-h-[calc(100%_"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="pr-6 mt-8 mx-8 mb-0"
        >
          <h2
            class="m-0 text-xl text-black font-semibold"
          >
            Title
          </h2>
        </div>
        <div
          class="flex relative flex-auto overflow-y"
        >
          <div
            class="pt-6 px-8 pb-8 overflow-auto flex-auto"
          >
            Modal test content
          </div>
        </div>
        <div
          class="mt-0 mx-8 mb-8 text-right"
        >
          <button
            aria-disabled="false"
            class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border border-solid text-black hover:border-black visited:text-black active:bg-gray active:border-black bg-white border-gray min-w h-8 py-0 px-4"
            data-component-type="button"
            role="button"
            tabindex="0"
            type="button"
          >
            <span
              class="items-center inline-flex font-semibold whitespace-nowrap text-button"
            >
              Cancel
            </span>
          </button>
          <button
            aria-disabled="false"
            class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#27D496] active:bg-[#00A96C] bg-green min-w h-8 py-0 px-4"
            data-component-type="button"
            role="button"
            tabindex="0"
            type="button"
          >
            <span
              class="items-center inline-flex font-semibold whitespace-nowrap text-button"
            >
              Update
            </span>
          </button>
        </div>
        <button
          aria-disabled="false"
          aria-label="Close"
          class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer rounded-full p-0 w-[1.5em] h-[1.5em] border-none text-graphite hover:bg-gray active:bg-gray focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] bg-transparent absolute top-8 right-8"
          data-component-type="button"
          data-testid="close-modal"
          role="button"
          tabindex="0"
          type="button"
        >
          <span
            class="items-center inline-flex font-semibold whitespace-nowrap text-button"
          >
            <svg
              class="fill-current inline-block text-inherit h-[1em] align-[-.125em]"
              style="min-width: 16px; min-height: 16px;"
              viewBox="0 0 16 16"
            >
              <path
                d="m8.707 8 3.5 3.5-.707.707-3.5-3.5-3.5 3.5-.707-.707 3.5-3.5-3.5-3.5.707-.707 3.5 3.5 3.5-3.5.707.707-3.5 3.5Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <span
      data-base-ui-focus-guard=""
      data-base-ui-inert=""
      data-type="inside"
      role="button"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Modal useModal opens and closes modal 1`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <button
        aria-disabled="false"
        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-base-ui-inert=""
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="items-center inline-flex font-semibold whitespace-nowrap text-button"
        >
          Show
        </span>
      </button>
      <div
        data-base-ui-portal=""
        id=":r5:"
      >
        <div
          class="fixed z-modal inset-0 bg-black/50 transition-opacity data-starting-style:opacity data-ending-style:opacity"
          data-base-ui-inert=""
          data-open=""
          data-starting-style=""
          role="presentation"
          style="user-select: none; transition-duration: 300ms;"
        />
        <span
          data-base-ui-focus-guard=""
          data-base-ui-inert=""
          data-type="inside"
          role="button"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="0"
        />
        <div
          class="fixed z-modal inset-0 flex flex-col text-lg leading-[normal] justify-center items-center transition-opacity data-starting-style:opacity data-ending-style:opacity"
          data-base-ui-focusable=""
          data-open=""
          data-starting-style=""
          id=":r3:"
          role="dialog"
          style="--nested-dialogs: 0; transition-duration: 300ms;"
          tabindex="-1"
        >
          <div
            class="bg-white shadow-2 transition-shadow duration-300 delay-0 outline-hidden overflow-y flex flex-col m-4 sm:h-auto sm:m-8 max-w-[calc(100%_ sm:max-w-[calc(100%_ rounded-md w-[40.625rem] relative max-h-[calc(100%_ sm:max-h-[calc(100%_"
            role="dialog"
            tabindex="-1"
          >
            <p>
              Modal content
            </p>
            <button
              aria-disabled="false"
              class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
              data-component-type="button"
              role="button"
              tabindex="0"
              type="button"
            >
              <span
                class="items-center inline-flex font-semibold whitespace-nowrap text-button"
              >
                Hide
              </span>
            </button>
          </div>
        </div>
        <span
          data-base-ui-focus-guard=""
          data-base-ui-inert=""
          data-type="inside"
          role="button"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="0"
        />
      </div>
      <span
        data-base-ui-focus-guard=""
        data-base-ui-inert=""
        data-type="outside"
        role="button"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="0"
      />
      <span
        aria-owns=":r5:"
        data-base-ui-inert=""
        style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
      />
      <span
        data-base-ui-focus-guard=""
        data-base-ui-inert=""
        data-type="outside"
        role="button"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`Modal useModal opens and closes modal 2`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <button
        aria-disabled="false"
        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="items-center inline-flex font-semibold whitespace-nowrap text-button"
        >
          Show
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`Modal useModal shows multiple modals at the same time 1`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <button
        aria-disabled="false"
        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-base-ui-inert=""
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="items-center inline-flex font-semibold whitespace-nowrap text-button"
        >
          Show first
        </span>
      </button>
      <button
        aria-disabled="false"
        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-base-ui-inert=""
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="items-center inline-flex font-semibold whitespace-nowrap text-button"
        >
          Show second
        </span>
      </button>
      <div
        data-base-ui-inert=""
        data-base-ui-portal=""
        id=":rg:"
      >
        <div
          class="fixed z-modal inset-0 bg-black/50 transition-opacity data-starting-style:opacity data-ending-style:opacity"
          data-base-ui-inert=""
          data-open=""
          data-starting-style=""
          role="presentation"
          style="user-select: none; transition-duration: 300ms;"
        />
        <span
          data-base-ui-focus-guard=""
          data-base-ui-inert=""
          data-type="inside"
          role="button"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="0"
        />
        <div
          class="fixed z-modal inset-0 flex flex-col text-lg leading-[normal] justify-center items-center transition-opacity data-starting-style:opacity data-ending-style:opacity"
          data-base-ui-focusable=""
          data-open=""
          data-starting-style=""
          id=":rc:"
          role="dialog"
          style="--nested-dialogs: 0; transition-duration: 300ms;"
          tabindex="-1"
        >
          <div
            class="bg-white shadow-2 transition-shadow duration-300 delay-0 outline-hidden overflow-y flex flex-col m-4 sm:h-auto sm:m-8 max-w-[calc(100%_ sm:max-w-[calc(100%_ rounded-md w-[40.625rem] relative max-h-[calc(100%_ sm:max-h-[calc(100%_"
            role="dialog"
            tabindex="-1"
          >
            <p>
              First modal content
            </p>
          </div>
        </div>
        <span
          data-base-ui-focus-guard=""
          data-base-ui-inert=""
          data-type="inside"
          role="button"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="0"
        />
      </div>
      <span
        data-base-ui-focus-guard=""
        data-base-ui-inert=""
        data-type="outside"
        role="button"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="0"
      />
      <span
        aria-owns=":rg:"
        data-base-ui-inert=""
        style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
      />
      <span
        data-base-ui-focus-guard=""
        data-base-ui-inert=""
        data-type="outside"
        role="button"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="0"
      />
      <div
        data-base-ui-portal=""
        id=":rh:"
      >
        <div
          class="fixed z-modal inset-0 bg-black/50 transition-opacity data-starting-style:opacity data-ending-style:opacity"
          data-base-ui-inert=""
          data-open=""
          data-starting-style=""
          role="presentation"
          style="user-select: none; transition-duration: 300ms;"
        />
        <span
          data-base-ui-focus-guard=""
          data-base-ui-inert=""
          data-type="inside"
          role="button"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="0"
        />
        <div
          class="fixed z-modal inset-0 flex flex-col text-lg leading-[normal] justify-center items-center transition-opacity data-starting-style:opacity data-ending-style:opacity"
          data-base-ui-focusable=""
          data-open=""
          data-starting-style=""
          id=":re:"
          role="dialog"
          style="--nested-dialogs: 0; transition-duration: 300ms;"
          tabindex="-1"
        >
          <div
            class="bg-white shadow-2 transition-shadow duration-300 delay-0 outline-hidden overflow-y flex flex-col m-4 sm:h-auto sm:m-8 max-w-[calc(100%_ sm:max-w-[calc(100%_ rounded-md w-[40.625rem] relative max-h-[calc(100%_ sm:max-h-[calc(100%_"
            role="dialog"
            tabindex="-1"
          >
            <p>
              Second modal content
            </p>
          </div>
        </div>
        <span
          data-base-ui-focus-guard=""
          data-base-ui-inert=""
          data-type="inside"
          role="button"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="0"
        />
      </div>
      <span
        data-base-ui-focus-guard=""
        data-base-ui-inert=""
        data-type="outside"
        role="button"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="0"
      />
      <span
        aria-owns=":rh:"
        data-base-ui-inert=""
        style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
      />
      <span
        data-base-ui-focus-guard=""
        data-base-ui-inert=""
        data-type="outside"
        role="button"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;
